force-app/main/default/objects/System_Access__c/System_Access__c.object-meta.xml
<CustomObject>
    <description>Business Unit: HR
Purpose: For tracking what systems employees have access to.
Created by AF</description>
    <label>System Access</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>