force-app/main/default/objects/System_Access__c/fields/Access_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_End_Date__c</fullName>
    <description>Created by AF</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Access End Date</label>
    <type>Date</type>
</CustomField>