force-app/main/default/objects/System_Access__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created by AF</description>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Systems Access</relationshipLabel>
    <relationshipName>Systems_Access</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>