force-app/main/default/objects/System_Access__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>Created by AF</description>
    <label>System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slack</fullName>
                <color>#33FFFF</color>
                <label>Slack</label>
            </value>
            <value>
                <fullName>G-Suite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>